--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -16,9 +16,7 @@
     "types": [
       "jasmine",
       "node",
-      "hammerjs",
-      "codova",
-      "cordova-plugin-device"
+      "hammerjs"
     ]
   },
   "files": [
