--- a/package.json
+++ b/package.json
@@ -12,24 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "github:angular/cdk-builds",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.3",
     "@angular/core": "^4.1.3",
     "@angular/forms": "^4.1.3",
     "@angular/http": "^4.1.3",
+    "@angular/material": "^2.0.0-beta.5",
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/router": "^4.1.3",
-    "@angular/material": "^2.0.0-beta.5",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "zone.js": "^0.8.4",
-    "rxjs": "^5.1.0"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@types/cordova": "0.0.34",
-    "@types/cordova-plugin-device": "0.0.3",
     "@angular/animations": "^4.1.3",
     "@angular/cli": "^1.0.4",
     "@angular/compiler-cli": "^4.0.0",
