--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -6,9 +6,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
     "lib": [
       "es2016",
       "dom"
@@ -17,9 +14,7 @@
     "module": "es2015",
     "baseUrl": "",
     "types": [
-      "hammerjs",
-      "codova",
-      "cordova-plugin-device"
+      "hammerjs"
     ]
   },
   "exclude": [
