--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "angular2-indexeddb": "^1.0.11",
     "core-js": "^2.4.1",
+    "gulp": "^3.9.1",
     "hammerjs": "^2.0.8",
+    "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
