--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -12,7 +12,7 @@
     "outDir": "../out-tsc/spec",
     "module": "commonjs",
     "target": "es5",
-    "baseUrl": "",
+    "baseUrl": ".",
     "types": [
       "jasmine",
       "node",
